<resources>
    <string name="app_name">Hirudo</string>
    <string name="tab_text_1">Übersicht</string>
    <string name="tab_text_2">Tagebuch</string>
    <string name="tab_text_3">Statistik</string>
    <string name="tab_text_4">Kalender</string>


    <string name="text_bluetooth_off">Bluetooth is Off</string>
    <string name="text_bluetooth_on">Bluetooth is On</string>

    <string name="text_enable">Enable</string>
    <string name="text_disable">Disable</string>

    <string name="text_view_paired">Paired Devices</string>
    <string name="text_scan_devices">Scan Devices</string>
    <string name="text_stop_scan">Scan Devices</string>

    <string name="text_list_paired_devices">Paired Devices</string>
    <string name="text_list_devices">List of Devices</string>

    <string name="text_pair">Pair</string>
    <string name="button">Button</string>

    <string name="textview">Kalender</string>
    <string name="button_text">Eingabe</string>
    <string name="textInput">Texteingabe</string>

    <string name="get_value">Get value</string>

</resources>