<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="#ff0000"
            android:text="@string/text_bluetooth_off" />

        <Button
            android:id="@+id/btn_enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:text="@string/text_enable" />

        <Button
            android:id="@+id/btn_view_paired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:enabled="false"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:text="@string/text_view_paired" />

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:enabled="false"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:text="@string/text_scan_devices" />

    <Button
        android:id="@+id/btn_getvalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:text="@string/get_value" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="132dp">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:text="Blutzuckerwert in [mg/dl]:"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_value"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_info" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="SAVE VALUE"
        android:textColor="#FFFFFF" />



</LinearLayout>